--- a/index.html
+++ b/index.html
@@ -28,31 +28,17 @@
                 <tr>
                     <td id="1" onclick="insertSymbol(this)" value="0"></td>
                     <td id="2" onclick="insertSymbol(this)" value="0"></td>
-                    <td id="3" onclick="insertSymbol(this)" value="0">
-
-                    </td>
+                    <td id="3" onclick="insertSymbol(this)" value="0"></td>
                 </tr>
                 <tr>
-                    <td id="4" onclick="insertSymbol(this)" value="0">
-
-                    </td>
-                    <td id="5" onclick="insertSymbol(this)" value="0">
-
-                    </td>
-                    <td id="6" onclick="insertSymbol(this)" value="0">
-
-                    </td>
+                    <td id="4" onclick="insertSymbol(this)" value="0"></td>
+                    <td id="5" onclick="insertSymbol(this)" value="0"></td>
+                    <td id="6" onclick="insertSymbol(this)" value="0"></td>
                 </tr>
                 <tr>
-                    <td id="7" onclick="insertSymbol(this)" value="0">
-
-                    </td>
-                    <td id="8" onclick="insertSymbol(this)" value="0">
-
-                    </td>
-                    <td id="9" onclick="insertSymbol(this)" value="0">
-
-                    </td>
+                    <td id="7" onclick="insertSymbol(this)" value="0"></td>
+                    <td id="8" onclick="insertSymbol(this)" value="0"></td>
+                    <td id="9" onclick="insertSymbol(this)" value="0"></td>
                 </tr>
             </table>
         </div>
